sql 패키지 빌드 해결하기 위한 작업중. (오류 해결못함)
1. 폴더 구분 추가. (파일위치 변경)
2. 빌드 방식 추가 수정. (라이브에서 로그 남는기능 추가)
3. 그외..